# dearai-backend

./: .env.example  .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 266d91ae7e5e_summary_table_update.py  a1141a72c34d_add_refresh_tokens_table.py  b2252b83d45e_remove_username_from_users.py
app/: config.py  database.py  dependencies.py  main.py
app/auth/: models.py  router.py  schemas.py  service.py  utils.py
app/chat/: router.py  schemas.py  service.py
app/chat/handlers/: text.py  voice.py
app/context/: __init__.py  base.py  graph_rag.py  summary.py
app/conversations/: models.py  router.py  schemas.py  service.py
app/emotion/: __init__.py  hume.py  schemas.py
app/guardrails/: __init__.py  input.py  output.py
app/llm/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  openai.py
app/speech/: __init__.py
app/speech/stt/: __init__.py  base.py  openai.py  sarvam.py
app/speech/tts/: __init__.py  base.py  openai.py  sarvam.py
app/users/: models.py  router.py  schemas.py  service.py
